Fix: Extract PR numbers from Slack link format

--- a/.github/workflows/poll-slack-reactions.yml
+++ b/.github/workflows/poll-slack-reactions.yml
@@ -44,9 +44,9 @@ jobs:
               if (!eyesReaction) continue;
               
               // Extract ALL PR numbers from message (handles multiple PRs in one message)
-              const messageText = message.text || '';
-              const prMatches = messageText.matchAll(/#(\d+)/g);
-              const prNumbers = Array.from(prMatches).map(match => parseInt(match[1]));
+            // Slack link format: <https://github.com/owner/repo/pull/123|#123: Title>
+            const messageText = message.text || '';
+            const prMatches = messageText.matchAll(/\/pull\/(\d+)\|/g);
               
               if (prNumbers.length === 0) {
                 console.log('⚠️ No PR numbers found in message with 👀 reaction');
